[metadata]
name = rpkimancer-aspa
description = A rpkimancer plugin providing support for ASPA objects
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Ben Maddison
author_email = benm@workonline.africa
url = https://github.com/benmaddison/rpkimancer-aspa
project_urls =
    Documentation=https://benmaddison.github.io/rpkimancer-aspa
    Bug Tracker=https://github.com/benmaddison/rpkimancer-aspa/issues
keywords =
    rpki
    draft-ietf-sidrops-aspa-profile
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Telecommunications Industry
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Testing
    Typing :: Typed

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    rpkimancer>=0.1.0, <0.2.0

[options.entry_points]
rpkimancer.asn1.modules =
    RPKI-ASPA-2020 = rpkimancer_aspa.asn1
rpkimancer.sigobj =
    Aspa = rpkimancer_aspa.sigobj:Aspa
rpkimancer.cli.conjure =
    ConjureAspa = rpkimancer_aspa.conjure:ConjureAspa
